# AWS-Security-Hardening

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
aws-security-toolkit/: .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  PROJECT_COMPLETION.md  README.md  pyproject.toml  requirements.txt
aws-security-toolkit/.github/workflows/: ci.yml  release.yml
aws-security-toolkit/docs/: README.md  hardening-runbook.md  least-priv-iam.md  org-multi-account.md  sg-remediation-notes.md
aws-security-toolkit/examples/: one_liners.md
aws-security-toolkit/examples/sample_reports/: cloudtrail-status.json  guardduty-status.json  no-mfa-report.csv  s3-block-public-access.json  security-group-audit.json
aws-security-toolkit/infra/cfn/: scheduler-cloudtrail.yaml  scheduler-guardduty.yaml  scheduler-iam-mfa.yaml  scheduler-s3-bpa.yaml  scheduler-securityhub.yaml  scheduler-sg-audit.yaml
aws-security-toolkit/infra/lambda/: README.md  build.sh
aws-security-toolkit/src/aws_sec_toolkit/: __init__.py
aws-security-toolkit/src/aws_sec_toolkit/core/: aws.py  cli.py  logging.py  regions.py
aws-security-toolkit/src/aws_sec_toolkit/lambda_handlers/: handler_cloudtrail.py  handler_guardduty.py  handler_iam_mfa.py  handler_s3_bpa.py  handler_securityhub.py  handler_sg_audit.py
aws-security-toolkit/src/aws_sec_toolkit/scripts/: cloudtrail_enable.py  guardduty_enable.py  iam_mfa_enforce.py  s3_block_public_access.py  securityhub_enable.py  sg_audit_fix.py
aws-security-toolkit/tests/: test_aws_helpers.py  test_cli.py  test_guardduty.py  test_regions.py  test_s3_bpa.py
docs/: USAGE.md  index.md
docs/tools/: cloudtrail.md  guardduty.md  iam_mfa.md  s3_bpa.md  securityhub.md  sg_audit.md
examples/: example_script.py
scripts/: cloudtrail_enable.py  guardduty_enable.py  iam_mfa_enforce.py  s3_block_public_access.py  security_group_audit_fix.py  securityhub_enable.py
scripts/cloudtrail/: README.md
scripts/guardduty/: README.md  enable_guardduty.py
scripts/iam/: README.md
scripts/s3/: README.md
src/awssec/: __init__.py  cli.py  sessions.py  utils.py
src/awssec/tools/: __init__.py  cloudtrail.py  guardduty.py  iam_mfa.py  s3_bpa.py  securityhub.py  sg_audit.py
utils/: __init__.py
