[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-security-toolkit"
version = "1.0.0"
description = "Comprehensive AWS security hardening toolkit"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AWS Security Team", email = "security@yourcompany.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/buffnerd/AWS-Security-Hardening"
Repository = "https://github.com/buffnerd/AWS-Security-Hardening.git"
Issues = "https://github.com/buffnerd/AWS-Security-Hardening/issues"
Documentation = "https://github.com/buffnerd/AWS-Security-Hardening/tree/main/docs"

[project.scripts]
aws-security-guardduty = "aws_sec_toolkit.scripts.guardduty_enable:main"
aws-security-securityhub = "aws_sec_toolkit.scripts.securityhub_enable:main"
aws-security-s3-bpa = "aws_sec_toolkit.scripts.s3_block_public_access:main"
aws-security-iam-mfa = "aws_sec_toolkit.scripts.iam_mfa_enforce:main"
aws-security-sg-audit = "aws_sec_toolkit.scripts.sg_audit_fix:main"
aws-security-cloudtrail = "aws_sec_toolkit.scripts.cloudtrail_enable:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aws_sec_toolkit = ["py.typed"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "S",   # bandit
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
]
ignore = [
    "S101", # assert statements (common in tests)
    "S603", # subprocess call (we validate inputs)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "S106", "S108"]

[tool.ruff.isort]
known-first-party = ["aws_sec_toolkit"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]